--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-flask
-sentence-transformers
-scikit-learn
-google-generative-ai
-requests
-python-bidi
+# Web Framework
+flask>=2.0.0
+
+# AI/ML Dependencies
+sentence-transformers>=2.2.0
+scikit-learn>=1.0.0
+google-generative-ai>=0.1.0
+
+# Utilities
+requests>=2.26.0
+python-bidi>=0.4.2
+python-dotenv>=0.19.0
+typing-extensions>=4.0.0
+
+# Testing
+pytest>=7.0.0
+pytest-cov>=3.0.0
+
+# Development
+black>=22.0.0
+flake8>=4.0.0
+mypy>=0.900
